--- a/css/svg/stepmania.css
+++ b/css/svg/stepmania.css
@@ -7,38 +7,17 @@ defs > g
 	stroke-width: 0.5;
 }
 
-g#arrowDL > path,
-g#holdDL > path,
-g#holdEndDL > path,
-g#rollDL > path,
-g#rollEndDL > path,
-g#mineDL > path,
-g#liftDL > path,
-g#fakeDL > path
+g[id$="DL"] > path
 {
 	stroke: black;
 }
 
-g#P0arrowDL > path,
-g#P0holdDL > path,
-g#P0holdEndDL > path,
-g#P0rollDL > path,
-g#P0rollEndDL > path,
-g#P0mineDL > path,
-g#P0liftDL > path,
-g#P0fakeDL > path
+g[id^="P0"][id$="DL"] > path
 {
         stroke: #483D8B;
 }
 
-g#P1arrowDL > path,
-g#P1holdDL > path,
-g#P1holdEndDL > path,
-g#P1rollDL > path,
-g#P1rollEndDL > path,
-g#P1mineDL > path,
-g#P1liftDL > path,
-g#P1fakeDL > path
+g[id^="P1"][id$="DL"] > path
 {
 	stroke: #B22222;
 }
