CSS files attributed.

--- a/css/_pager.css
+++ b/css/_pager.css
@@ -1,3 +1,10 @@
+/*
+CSS file for Pump Pro Edits
+
+@package pumpproedits
+@author wolfman2000
+@license GNU Affero GPL v3 or later
+*/
 .pager
 {
 	padding-bottom: 0.25em;
