--- a/css/stats.css
+++ b/css/stats.css
@@ -1,2 +1,9 @@
+/*
+CSS file for Pump Pro Edits
+
+@package pumpproedits
+@author wolfman2000
+@license GNU Affero GPL v3 or later
+*/
 @import "_form.css";
 
