--- a/css/chart.css
+++ b/css/chart.css
@@ -1,3 +1,10 @@
+/*
+CSS file for Pump Pro Edits
+
+@package pumpproedits
+@author wolfman2000
+@license GNU Affero GPL v3 or later
+*/
 @import "_form.css";
 
 @media screen
