--- a/css/svg/stepmania.css
+++ b/css/svg/stepmania.css
@@ -1,3 +1,10 @@
+/*
+CSS file for Pump Pro Edits
+
+@package pumpproedits
+@author wolfman2000
+@license GNU Affero GPL v3 or later
+*/
 @import "_svg.css";
 
 defs > g
